Added some more packages

--- a/src/Makefile
+++ b/src/Makefile
@@ -14,6 +14,8 @@ USRLIBDIR	= $(USRDIR)/lib
 USRINCLUDEDIR	= $(USRDIR)/include
 USRLOCALDIR	= $(USRDIR)/local
 
+CORES		= 4
+
 TMPDIR		= $(PREFIX)/tmp
 MNTDIR		= $(PREFIX)/mnt
 DEVDIR		= $(PREFIX)/dev
@@ -21,8 +23,9 @@ ETCDIR		= $(PREFIX)/etc
 ROOTDIR		= $(PREFIX)/root
 PROCDIR		= $(PREFIX)/proc
 VARDIR		= $(PREFIX)/var
+BOOTDIR		= $(PREFIX)/boot
 
-all: $(USRLIBDIR)/libc.so
+all: / boot/bzImage $(USRLIBDIR)/libc.a $(USRLIBDIR)/libasm.a $(USRBINDIR)/coreutils $(USRBINDIR)/edt
 
 src/linux:
 	cd src/ && git clone --depth 1 git@github.com:torvalds/linux
@@ -30,17 +33,36 @@ src/linux:
 $(USRINCLUDEDIR)/linux: src/linux
 	cd src/linux && make headers_install ARCH=x86_64 INSTALL_HDR_PATH=../../$(USRDIR)
 
-src/libc:
-	cd src/ && git clone https://github.com/JD297/libc.git
+src/linux/.config: src/linux
+	cd src/linux && make menuconfig
 
-$(USRLIBDIR)/libc.so: usr $(USRINCLUDEDIR)/linux src/libc
+boot/bzImage: boot src/linux/.config
+	cd src/linux && make -j $(CORES)
+	
+
+src/libc:
+	cd src/ && git clone git@github.com:jd297/libc.git
+
+$(USRLIBDIR)/libc.a: usr $(USRINCLUDEDIR)/linux src/libc
 	cd src/libc && make install PREFIX=../../$(USRDIR)
+
+src/libasm:
+	cd src/ && git clone git@github.com:jd297/libasm.git
+
+$(USRLIBDIR)/libasm.a: usr $(USRINCLUDEDIR)/linux src/libasm
+	cd src/libasm && make install PREFIX=../../$(USRDIR)
 
 src/coreutils:
 	cd src/ && git clone git@github.com:jd297/coreutils
 
-$(USRBINDIR)/sh: $(USRLIBDIR)/libc.so src/coreutils
+$(USRBINDIR)/coreutils: $(USRLIBDIR)/libc.a src/coreutils
 	cd src/coreutils && make install PREFIX=../../$(USRDIR)
+
+src/edt:
+	cd src/ && git clone git@github.com:jd297/edt
+
+$(USRBINDIR)/edt: $(USRLIBDIR)/libc.a src/edt
+	cd src/edt && make install PREFIX=../../$(USRDIR)
 
 /: usr usr/local tmp mnt dev etc root proc var bin sbin lib
 
